--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\Simon\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-1859186250.properties
+deploy.ant.properties.file=C:\\Users\\bruger\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-738296692.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Simon/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1
+j2ee.server.domain=C:/Users/bruger/GlassFish_Server/glassfish/domains/Glassfishy
+j2ee.server.home=C:/Users/bruger/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\bruger\\GlassFish_Server\\glassfish;C:\\Users\\bruger\\GlassFish_Server\\glassfish\\domains\\Glassfishy]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/bruger/GlassFish_Server
