--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Temporary Items
 /nbproject/private/
 nbproject/private/private.properties
 nbproject/project.properties
+nbproject/private/private.properties
