--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ Temporary Items
 nbproject/private/private.properties
 nbproject/project.properties
 nbproject/private/private.properties
+nbproject/genfiles.properties
+nbproject/build-impl.xml
